# BankCompetition

./: .gitignore  LICENSE.txt  README.md  __main__.py  requirements.txt  run.py
bankcompetition/: README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
bankcompetition/src/bankcompetition/: ServerSubmission.py  entry.py  game.py  gamestate.py  main.py
entries/: a_virus.py  klink.py  manual.py  target.py  the_leech.py  tutu.py
server/: Routes.py  ServerGame.py  ServerPlayer.py  __init__.py
server/templates/: Home.html
serverEntries/: tutu.py
src/: ServerSubmission.py  __main__.py  entry.py  game.py  gamestate.py  player.py
src/entries/: deca.py  end_game.py  gradient.py  manual_1.py  never.py  scrooge.py
src/serverEntries/: tutu.py
